--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,17 @@
-body {width: 100%;}
+html { width: 100%; height: 100%;}
+body {min-height: 100%; margin: 0; padding: 0; width: 100%; position: relative;}
+
+.main { padding-bottom: 100px;}
+.row {max-width: 100%;}
+
+.bloc_article {width: 60%; margin: 0 auto; background-color: rgba(52,58,64); border-radius: 5px;}
+.bloc_article h2 {text-align: center; color: #fff;}
+.bloc_article .contenu {padding: 2%; width: 90%; margin: auto; background-color: rgb(192, 198, 204); border-radius: 5px;}
+.bloc_article .date_article {text-align: center; color: rgb(243, 215, 215)}
+
 
 .title-home h1, .title-home p {text-align: center;}
 
-footer { background: linear-gradient(rgba(52,58,64,1), rgba(52,58,64,0.3));}
+footer {background: linear-gradient(rgba(52,58,64,1), rgba(52,58,64,0.3)); position: absolute; bottom: 0; right: 0; left: 0;}
 footer .bloc_footer {text-align: center;}
 footer h2 {color: rgb(180, 175, 175);}
