--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,11 @@ body {min-height: 100%; margin: 0; padding: 0; width: 100%; position: relative;}
 .main { padding-bottom: 100px;}
 .row {max-width: 100%;}
 
-.bloc_article {width: 60%; margin: 0 auto; background-color: rgba(52,58,64); border-radius: 5px;}
+.bloc_article {width: 60%; margin: 0 auto; background-color: rgba(52,58,64); border-radius: 5px; margin-bottom: 50px;}
 .bloc_article h2 {text-align: center; color: #fff;}
-.bloc_article .contenu {padding: 2%; width: 90%; margin: auto; background-color: rgb(192, 198, 204); border-radius: 5px;}
+.bloc_article .contenu {padding: 2% 5% 2% 5%; width: 90%; margin: auto; background-color: rgb(192, 198, 204); border-radius: 5px; height: 500px; overflow-y: hidden; text-align: justify;}
 .bloc_article .date_article {text-align: center; color: rgb(243, 215, 215)}
+.bloc_article .date_lien {display: flex; justify-content: space-between; padding: 0 10%;}
 
 
 .title-home h1, .title-home p {text-align: center;}
