--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,47 @@
+/*-----general------*/
+
 html { width: 100%; height: 100%;}
 body {min-height: 100%; margin: 0; padding: 0; width: 100%; position: relative;}
 
-.main { padding-bottom: 100px;}
+.main {min-height: calc(100vh - 56px - 110px); margin-bottom: 40px;}
 .row {max-width: 100%;}
+.main h1 {text-align: center;}
+.block_alert {color: red;}
+
+/*-------- home --------*/
 
 .bloc_article {width: 60%; margin: 0 auto; background-color: rgba(52,58,64); border-radius: 5px; margin-bottom: 50px;}
 .bloc_article h2 {text-align: center; color: #fff;}
 .bloc_article .contenu {padding: 2% 5% 2% 5%; width: 90%; margin: auto; background-color: rgb(192, 198, 204); border-radius: 5px; height: 500px; overflow-y: hidden; text-align: justify;}
 .bloc_article .date_article {text-align: center; color: rgb(243, 215, 215)}
 .bloc_article .date_lien {display: flex; justify-content: space-between; padding: 0 10%;}
-.block_alert {color: red;}
-
 .title-home h1, .title-home p {text-align: center;}
 
-footer {background: linear-gradient(rgba(52,58,64,1), rgba(52,58,64,0.3)); position: absolute; bottom: 0; right: 0; left: 0;}
+
+/*------ article --------*/
+
+.créer_commentaire textarea {width: 100%;}
+.commentaire {border: 1px solid rgba(52,58,64); padding: 2% 3%; margin: 5% 3%; border-radius: 15px; background-color: rgb(192, 198, 204);}
+
+/*--------page inscription----------*/
+
+.bloc_inscription {border: 1px solid rgba(52,58,64); border-radius: 15px; margin: 15% auto; padding: 5%; width: 40%; background-color: rgb(192, 198, 204);}
+.bloc_inscription form {text-align: center;}
+.bloc_inscription input {margin: 10px 0;}
+
+/*------page confirmation-inscription------*/
+
+.bloc_validation {margin: 20% auto; padding: 20px; text-align: center; border: 1px solid rgba(52,58,64); background-color: rgb(192, 198, 204); width: 50%;}
+
+
+/*------page connexion-------*/
+
+.bloc_connexion {margin: 20% auto; padding: 20px; text-align: center; border: 1px solid rgba(52,58,64); background-color: rgb(192, 198, 204); width: 50%;}
+.bloc_connexion input {margin-top: 20px;}
+
+
+/*------footer-------*/
+
+footer {background: linear-gradient(rgba(52,58,64,1), rgba(52,58,64,0.3)); position: relative; bottom: 0; right: 0; left: 0;}
 footer .bloc_footer {text-align: center;}
 footer h2 {color: rgb(180, 175, 175);}
